--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -48,14 +48,39 @@
 
 <body>
     <div class="wrapper">
-        @if (User.Identity.IsAuthenticated)
+        @if (User.Identity.IsAuthenticated && User.IsInRole("ADMIN"))
         {
             <div class="sidebar" data-color="blue" data-image="~/assets/img/sidebar-5.jpg">
                 <!--
-                Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
+                    Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
 
-                Tip 2: you can also add an image using data-image tag
-            -->
+                    Tip 2: you can also add an image using data-image tag
+                -->
+                <div class="sidebar-wrapper">
+                    <div class="logo">
+                        <a href="#" class="simple-text">
+                            Eng House
+                        </a>
+                    </div>
+                    <ul class="nav">
+                        <li>
+                            <a class="nav-link" asp-controller="Clients" asp-action="Index">
+                                <i class="nc-icon nc-pin-3"></i>
+                                <p>Clients</p>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        }
+        @if (User.Identity.IsAuthenticated && User.IsInRole("PROJECT MANAGER"))
+        {
+            <div class="sidebar" data-color="blue" data-image="~/assets/img/sidebar-5.jpg">
+                <!--
+                    Tip 1: You can change the color of the sidebar using: data-color="purple | blue | green | orange | red"
+
+                    Tip 2: you can also add an image using data-image tag
+                -->
                 <div class="sidebar-wrapper">
                     <div class="logo">
                         <a href="#" class="simple-text">
@@ -94,16 +119,12 @@
                                 <p>Invoices</p>
                             </a>
                         </li>
-                        <li>
-                            <a class="nav-link" asp-controller="Clients" asp-action="Index">
-                                <i class="nc-icon nc-pin-3"></i>
-                                <p>Clients</p>
-                            </a>
-                        </li>
                     </ul>
                 </div>
             </div>
+
         }
+
 
         <div class="main-panel">
             <!-- Navbar -->
@@ -120,46 +141,46 @@
                         <ul class="nav navbar-nav mr-auto">
 
                             @*<li class="dropdown nav-item">
-                                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                                    <i class="nc-icon nc-planet"></i>
-                                    <span class="notification">5</span>
-                                    <span class="d-lg-none">Notification</span>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <a class="dropdown-item" href="#">Notification 1</a>
-                                    <a class="dropdown-item" href="#">Notification 2</a>
-                                    <a class="dropdown-item" href="#">Notification 3</a>
-                                    <a class="dropdown-item" href="#">Notification 4</a>
-                                    <a class="dropdown-item" href="#">Another notification</a>
-                                </ul>
-                            </li>*@
+                                    <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
+                                        <i class="nc-icon nc-planet"></i>
+                                        <span class="notification">5</span>
+                                        <span class="d-lg-none">Notification</span>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <a class="dropdown-item" href="#">Notification 1</a>
+                                        <a class="dropdown-item" href="#">Notification 2</a>
+                                        <a class="dropdown-item" href="#">Notification 3</a>
+                                        <a class="dropdown-item" href="#">Notification 4</a>
+                                        <a class="dropdown-item" href="#">Another notification</a>
+                                    </ul>
+                                </li>*@
 
                         </ul>
                         <ul class="navbar-nav ml-auto">
                             @*<li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Account</span>
-                                </a>
-                            </li>*@
+                                    <a class="nav-link" href="#pablo">
+                                        <span class="no-icon">Account</span>
+                                    </a>
+                                </li>*@
                             <partial name="_LoginPartial" />
                             @*<li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    <span class="no-icon">Dropdown</span>
-                                </a>
-                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                    <a class="dropdown-item" href="#">Action</a>
-                                    <a class="dropdown-item" href="#">Another action</a>
-                                    <a class="dropdown-item" href="#">Something</a>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                    <div class="divider"></div>
-                                    <a class="dropdown-item" href="#">Separated link</a>
-                                </div>
-                            </li>*@
+                                    <a class="nav-link dropdown-toggle" href="http://example.com" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="no-icon">Dropdown</span>
+                                    </a>
+                                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                        <a class="dropdown-item" href="#">Action</a>
+                                        <a class="dropdown-item" href="#">Another action</a>
+                                        <a class="dropdown-item" href="#">Something</a>
+                                        <a class="dropdown-item" href="#">Something else here</a>
+                                        <div class="divider"></div>
+                                        <a class="dropdown-item" href="#">Separated link</a>
+                                    </div>
+                                </li>*@
                             @*<li class="nav-item">
-                                <a class="nav-link" href="#pablo">
-                                    <span class="no-icon">Log out</span>
-                                </a>
-                            </li>*@
+                                    <a class="nav-link" href="#pablo">
+                                        <span class="no-icon">Log out</span>
+                                    </a>
+                                </li>*@
                         </ul>
                     </div>
                 </div>
