create managers by admin page

--- a/ProjectManagement/Views/Shared/_Layout.cshtml
+++ b/ProjectManagement/Views/Shared/_Layout.cshtml
@@ -69,6 +69,12 @@
                                 <p>Clients</p>
                             </a>
                         </li>
+                        <li>
+                            <a class="nav-link" asp-controller="ProjectManagers" asp-action="Index">
+                                <i class="nc-icon nc-pin-3"></i>
+                                <p>Project Managers</p>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
