make different layout for homepage

--- a/ProjectManagement/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ProjectManagement/Areas/Identity/Pages/Account/Login.cshtml
@@ -2,54 +2,13 @@
 @model LoginModel
 
 @{
-    ViewData["Title"] = "Log in";
+    Layout = "~/Views/Shared/HomeLayout.cshtml";
 }
 
-<!--
-    div class="row">
-    <div class="col-md-4">
-        <section>
-            <form id="account" method="post">
-                <h4>Use a local account to log in.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <div class="checkbox">
-                        <label asp-for="Input.RememberMe">
-                            <input asp-for="Input.RememberMe" />
-                            @*@Html.DisplayNameFor(m => m.Input.RememberMe)*@
-                        </label>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary">Log in</button>
-                </div>
-                <div class="form-group">
-                    <p>
-                        <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
-                    </p>
-                    <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@*@Model.ReturnUrl*@">Register as a new user</a>
-                    </p>
-                </div>
-            </form>
-        </section>
-    </div>
-</div>
--->
+
 <head>
-        <link rel="stylesheet" href="/css/LoginSheet.css">
- </head>
+    <link rel="stylesheet" href="/css/LoginSheet.css">
+</head>
 
 <section class="h-100 gradient-form" style="background-color: #eee;">
     <div class="container py-5 h-100">
@@ -71,8 +30,7 @@
                                     <p>Please login to your account</p>
 
                                     <div class="form-outline mb-4">
-                                        <input asp-for="Input.Email" class="form-control"
-                                               />
+                                        <input asp-for="Input.Email" class="form-control" />
                                         <label class="form-label" for="form2Example11">Email</label>
                                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                                     </div>
@@ -88,7 +46,7 @@
                                             Log
                                             in
                                         </button>
-                                        <a class="text-muted"  id="forgot-password" asp-page="./ForgotPassword">Forgot password?</a>
+                                        <a class="text-muted" id="forgot-password" asp-page="./ForgotPassword">Forgot password?</a>
                                     </div>
 
                                     <div class="d-flex align-items-center justify-content-center pb-4">
