--- a/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ProjectManagement/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,36 +1,10 @@
 ﻿@page
 @model RegisterModel
 @{
-    ViewData["Title"] = "Register";
+    Layout = "~/Views/Shared/HomeLayout.cshtml";
 }
 
-@*<h1>@ViewData["Title"]</h1>
 
-    <div class="row">
-        <div class="col-md-4">
-            <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-                <h4>Create a new account.</h4>
-                <hr />
-                <div asp-validation-summary="All" class="text-danger"></div>
-                <div class="form-group">
-                    <label asp-for="Input.Email"></label>
-                    <input asp-for="Input.Email" class="form-control" />
-                    <span asp-validation-for="Input.Email" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.Password"></label>
-                    <input asp-for="Input.Password" class="form-control" />
-                    <span asp-validation-for="Input.Password" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="Input.ConfirmPassword"></label>
-                    <input asp-for="Input.ConfirmPassword" class="form-control" />
-                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-            </form>
-        </div>
-    </div>*@
 
 <head>
     <link rel="stylesheet" href="/css/LoginSheet.css">
@@ -57,8 +31,7 @@
                                     <p>Register</p>
 
                                     <div class="form-outline mb-4">
-                                        <input asp-for="Input.Email" class="form-control"
-                                                />
+                                        <input asp-for="Input.Email" class="form-control" />
                                         <label class="form-label" for="form2Example11">Email:</label>
                                         <span asp-validation-for="Input.Email" class="text-danger"></span>
                                     </div>
@@ -75,9 +48,9 @@
                                     </div>
                                     <div class="text-center pt-1 mb-5 pb-1">
                                         <button class="btn btn-info btn-block fa-lg  mb-3" type="submit">
-                                           Register
+                                            Register
                                         </button>
-                                       
+
                                     </div>
                                 </form>
 
