--- a/ProjectManagement/Views/Home/Index.cshtml
+++ b/ProjectManagement/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "~/Views/Shared/HomeLayout.cshtml";
+}
+<!DOCTYPE html>
 <html style="font-size: 16px;" lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -67,7 +70,7 @@
                             </span>
                             <h2 class="u-custom-font u-font-roboto-condensed u-text u-text-4">Analysis</h2>
                             <p class="u-text u-text-5">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                            
+
                         </div>
                     </div>
                     <div class="u-align-center u-container-style u-list-item u-palette-3-base u-repeater-item u-list-item-2">
@@ -98,7 +101,7 @@
                             </span>
                             <h2 class="u-custom-font u-font-roboto-condensed u-text u-text-6">Planning</h2>
                             <p class="u-text u-text-7">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                            
+
                         </div>
                     </div>
                     <div class="u-align-center u-container-style u-list-item u-palette-3-light-1 u-repeater-item u-list-item-3">
@@ -106,7 +109,7 @@
                             <span class="u-icon u-icon-circle u-white u-icon-3"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 64 64" style=""><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-3635"></use></svg><svg class="u-svg-content" viewBox="0 0 64 64" id="svg-3635"><path d="m7 62h4c.55273 0 1-.44775 1-1v-7h24v7c0 .55225.44727 1 1 1h9 6 9c.55273 0 1-.44775 1-1v-15c0-.26514-.10547-.51953-.29297-.70703l-1.70703-1.70703v-8.58594-32c0-.55225-.44727-1-1-1h-52c-2.75684 0-5 2.24316-5 5v50c0 2.75684 2.24316 5 5 5zm40-2v-10h4v10zm13 0h-7v-11c0-.55225-.44727-1-1-1h-6c-.55273 0-1 .44775-1 1v11h-7v-13.58594l11-11 4.29297 4.29297c.28711.28662.7168.37207 1.08984.2168.37403-.15479.61719-.51953.61719-.92383v-3h3v8c0 .26514.10547.51953.29297.70703l1.70703 1.70703zm-53-56h51v30h-4c-.55273 0-1 .44775-1 1v1.58594l-3.29297-3.29297c-.39062-.39062-1.02344-.39062-1.41406 0l-12 12c-.1875.1875-.29297.44189-.29297.70703v6h-24v-41c0-.55225-.44727-1-1-1h-4c-1.6543 0-3-1.3457-3-3s1.3457-3 3-3zm-3 6.99756c.83594.6289 1.875 1.00244 3 1.00244h3v48h-3c-1.6543 0-3-1.3457-3-3z"></path><path d="m16 43h6c.55273 0 1-.44775 1-1 0-1.30371.83594-2.41602 2-2.82861v2.82861c0 .55225.44727 1 1 1h7c.55273 0 1-.44775 1-1v-13h20c.55273 0 1-.44775 1-1v-20c0-.55225-.44727-1-1-1h-38c-.55273 0-1 .44775-1 1v34c0 .55225.44727 1 1 1zm37-16h-12v-2h3c.55273 0 1-.44775 1-1 0-2.41455-1.7207-4.43506-4-4.89941v-10.10059h12zm-25-18v10h-1v2h2c.55273 0 1-.44775 1-1v-11h9v11c0 .55225.44727 1 1 1 1.30371 0 2.41602.83594 2.8291 2h-2.8291c-.55273 0-1 .44775-1 1v3h-6c-.55273 0-1 .44775-1 1v13h-5v-3c0-.55225-.44727-1-1-1-2.41504 0-4.43457 1.7207-4.89941 4h-4.10059v-20h7v-2h-7v-10z"></path><path d="m14 48h2v2h-2z"></path><path d="m18 48h2v2h-2z"></path><path d="m22 48h2v2h-2z"></path></svg></span>
                             <h2 class="u-custom-font u-font-roboto-condensed u-text u-text-8">Design</h2>
                             <p class="u-text u-text-9">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                            
+
                         </div>
                     </div>
                     <div class="u-align-center u-container-style u-list-item u-palette-3-light-2 u-repeater-item u-list-item-4">
@@ -140,7 +143,7 @@
                             </span>
                             <h2 class="u-custom-font u-font-roboto-condensed u-text u-text-10">Building</h2>
                             <p class="u-text u-text-11">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat.</p>
-                           
+
                         </div>
                     </div>
                 </div>
@@ -167,7 +170,7 @@
                     <label for="message-4c18" class="u-label">Message</label>
                     <textarea placeholder="Enter your message" rows="4" cols="50" id="message-4c18" name="message" class="u-border-2 u-border-grey-10 u-grey-10 u-input u-input-rectangle u-radius-10" required=""></textarea>
                 </div>
-                
+
                 <div class="u-align-right u-form-group u-form-submit">
                     <a href="#" class="u-active-palette-3-base u-border-5 u-border-active-palette-3-base u-border-hover-palette-3-base u-border-palette-2-base u-btn u-btn-round u-btn-submit u-button-style u-hover-palette-3-base u-palette-2-base u-radius-10 u-btn-1">Submit your request</a>
                     <input type="submit" value="submit" class="u-form-control-hidden">
